Update hero image to Appily college campus photo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      ======================================== */
   .hero {
     min-height: 100vh;
-    background: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=1920&q=80') center/cover fixed;
+    background: url('https://www.appily.com/sites/default/files/styles/max_1200/public/images/hero/college/170976_hero.jpg?itok=0kQr2Cl4') center/cover fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
