--- a/index.html
+++ b/index.html
@@ -1400,14 +1400,63 @@ stops.forEach(stop => {
   markers[stop.num] = { marker, stop };
 });
 
-// Draw route line
-const routeCoords = stops.map(s => [s.lat, s.lng]);
-L.polyline(routeCoords, {
-  color: '#C45D35',
-  weight: 3,
-  opacity: 0.6,
-  dashArray: '8, 8'
-}).addTo(map);
+// Decode polyline encoded route from OSRM
+function decodePolyline(encoded) {
+  let inv = 1.0 / 1e6;
+  let decoded = [];
+  let previous = [0, 0];
+  let i = 0;
+  
+  while (i < encoded.length) {
+    let ll = [0, 0];
+    for (let j = 0; j < 2; j++) {
+      let shift = 0;
+      let result = 0;
+      let byte = 0;
+      do {
+        byte = encoded.charCodeAt(i++) - 63;
+        result |= (byte & 0x1f) << shift;
+        shift += 5;
+      } while (byte >= 0x20);
+      ll[j] = previous[j] + (result & 1 ? ~(result >> 1) : result >> 1);
+      previous[j] = ll[j];
+    }
+    decoded.push([ll[0] * inv, ll[1] * inv]);
+  }
+  return decoded;
+}
+
+// Fetch actual driving route from OSRM
+async function fetchDrivingRoute() {
+  const coords = stops.map(s => `${s.lng},${s.lat}`).join(';');
+  try {
+    const response = await fetch(`https://router.project-osrm.org/route/v1/driving/${coords}?geometries=polyline&overview=full`);
+    const data = await response.json();
+    
+    if (data.routes && data.routes[0]) {
+      const routeGeometry = data.routes[0].geometry;
+      const routeCoords = decodePolyline(routeGeometry);
+      
+      L.polyline(routeCoords, {
+        color: '#C45D35',
+        weight: 3,
+        opacity: 0.7
+      }).addTo(map);
+    }
+  } catch (error) {
+    console.warn('OSRM routing failed, using straight line fallback');
+    const routeCoords = stops.map(s => [s.lat, s.lng]);
+    L.polyline(routeCoords, {
+      color: '#C45D35',
+      weight: 3,
+      opacity: 0.6,
+      dashArray: '8, 8'
+    }).addTo(map);
+  }
+}
+
+// Draw route line using actual highway routing
+fetchDrivingRoute();
 
 // Fit bounds
 map.fitBounds(L.latLngBounds(routeCoords), { padding: [50, 50] });
