Fix hero background responsiveness on tablets
- Added background-attachment: scroll for .hero at 1024px breakpoint
- Fixes issue where fixed attachment caused rendering/scaling problems on tablets
- Matches existing fix applied to .parallax-section

--- a/index.html
+++ b/index.html
@@ -713,6 +713,11 @@
     .parallax-section {
       background-attachment: scroll;
     }
+    
+    /* Fix hero background on tablets - fixed attachment causes issues */
+    .hero {
+      background-attachment: scroll;
+    }
   }
   
   @media (max-width: 768px) {
